fix spacing the previous version code bad

--- a/attestation/css/style.scss
+++ b/attestation/css/style.scss
@@ -53,7 +53,8 @@
 
 .card {
   padding: 20px;
-  margin-bottom: 20px;
+  gap: 1rem;
+  margin: 2rem 0;
 }
 
 /*output is hidden*/
